@startuml

' =======================
'        PACKAGES
' =======================

package "ui" {
    class LoginFrame {
        - usernameField : TextField
        - pwdField : PasswordField
        - loginButton
        - controller : LoginController
    }

    class LoginController {
        - view : LoginFrame
        - sessionFacade : SessionFacade
        + login()
    }
}

package "façade" {
    class SessionFacade {
        - instance : SessionFacade
        - userManager : UserManager
        + login(id : String, pwd : String) : boolean
    }
}

package "domain" {
    class User {
        - id : Long
        - name : String
        - email : String
        - pwdHash : String
        - phone : String
        - role : UserRole
        - status : UserStatus
    }
}

package "persistance" {
    
    package "dao" {
        interface UserDAO {
            + getUserByID(id : Long) : User
            + getUserByCredentials(login : String, pwd : String) : User
            + saveUser(u : User)
        }

        class UserDAOPostgres {
            + getUserByID(id : Long) : User
            + getUserByCredentials(login : String, pwd : String) : User
            + saveUser(u : User)
        }
    }

    package "factory" {
        class AbstractFactory {
            + createUserDAO() : UserDAO
        }

        class PostgresFactory {
            + createUserDAO() : UserDAO
        }
    }
}

package "services" {
    class UserManager {
        - userDAO : UserDAO
        - currentUser : User
        + login(id : String, pwd : String) : User
    }
}

' =======================
'     RELATIONSHIPS
' =======================

LoginFrame --> LoginController
LoginController --> SessionFacade : uses

SessionFacade --> UserManager
UserManager --> UserDAO

AbstractFactory <|-- PostgresFactory
UserDAO <|-- UserDAOPostgres

PostgresFactory --> UserDAOPostgres : createUserDAO()

UserManager --> User : returns

@enduml
